@@ -6819,7 +6819,7 @@ elf_link_input_bfd (struct elf_final_link_info *finfo, bfd *input_bfd)
 		    {
 		      Elf_Internal_Sym *sym = isymbuf + r_symndx;
 		      ps = &finfo->sections[r_symndx];
-		      sym_name = bfd_elf_sym_name (input_bfd, sym);
+		      sym_name = bfd_elf_sym_name (input_bfd, symtab_hdr, sym);
 		    }
 
 		  /* Complain if the definition comes from a
